--- a/package.json
+++ b/package.json
@@ -9,14 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-linking": "^6.3.1",
+    "expo-router": "^3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-web": "~0.19.10",
+    "socket.io-client": "^4.7.5",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-class-properties": "^7.25.4",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "typescript": "^5.1.3"
   },
   "private": true
