--- a/app.json
+++ b/app.json
@@ -19,15 +19,14 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.wjdgotjd529.lightstickfrontend"
     },
     "web": {
       "bundler": "metro",
       "favicon": "./assets/icon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     },
